--- a/Running-Tracker/styles.css
+++ b/Running-Tracker/styles.css
@@ -76,9 +76,55 @@ li {
 
 .data div {
     background: #141c22;
-    display: flex;
-    align-items: center;
+    display: flex; 
     justify-content: space-between;
+    align-items: center;
     margin: 0.5rem 0;
     padding: 0 1rem;
 }
+
+.progress {
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+  
+  .progress h3 {
+    font-size: 1.6rem;
+    font-weight: lighter;
+  }
+  
+  .progressCircleWrapper {
+    display: flex;
+    justify-content: center;
+  }
+  
+  #progressCircle {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #progressCenter {
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    background: #1c262f;
+  }
+  
+  @media screen and (min-width: 800px) {
+    body {
+      width: 60%;
+    }
+  
+    svg {
+      max-width: 50%;
+    }
+  
+    input[type='number'] {
+      width: 40%;
+    }
+  }
