--- a/Guess-the-number/styles.css
+++ b/Guess-the-number/styles.css
@@ -95,6 +95,22 @@ input {
     font-size: 1.6rem;
 }
 
+.flash {
+    animation: flash 1s infinite;
+  }
+  
+  @keyframes flash {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
 #newGameButton {
     border-radius: 0;
 }
